--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,6 +4,7 @@
   <title>DesignQA Bug Reporter</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div class="popup-container">
