--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,16 +1,175 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>DesignQA Bug Reporter</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="popup.css">
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+    }
+
+    .popup-container {
+      width: auto;
+      height: auto;
+      background: #fff;
+      border-radius: 0;
+      padding: 0px;
+      border: none;
+      box-shadow: none;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .popup-header {
+      margin-bottom: 24px;
+      padding: 0;
+    }
+
+    .popup-header h1 {
+      margin: 0;
+      font-size: 18px;
+      color: #1a1a1a;
+    }
+
+    .popup-content {
+      max-height: 400px;
+      overflow-y: auto;
+      padding: 0;
+    }
+
+    .reports-list {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .loading-state {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      padding: 20px;
+      color: #666;
+    }
+
+    .spinner {
+      width: 24px;
+      height: 24px;
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #007bff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* Add card style for each report */
+    .report-card {
+      border: 1px solid #e0e0e0;
+      border-radius: 12px;
+      padding: 16px;
+      background: #fff;
+      margin-bottom: 12px;
+      box-shadow: none;
+    }
+
+    /* Style the flag and category row */
+    .flag-category-row {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 8px;
+    }
+
+    .flag-icon {
+      font-size: 16px;
+      color: #b71c1c;
+    }
+
+    .category-label {
+      font-weight: bold;
+      color: #222;
+    }
+
+    .shortcut-info {
+      background: #f8f9fa;
+      padding: 16px;
+      border-radius: 8px;
+      margin-bottom: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .shortcut-info p {
+      margin: 0;
+      color: #666;
+      font-size: 14px;
+    }
+
+    kbd {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 2px 6px;
+      font-family: monospace;
+      font-size: 12px;
+      box-shadow: none;
+    }
+
+    /* Apply this class to your button */
+    .start-highlighting-btn {
+      background: linear-gradient(135deg, #007bff, #0056b3);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 500;
+      transition: all 0.3s ease;
+      margin-bottom: 5px;
+    }
+
+    .start-highlighting-btn:hover {
+      background: linear-gradient(135deg, #0056b3, #004494);
+      transform: translateY(-1px);
+      box-shadow: none;
+    }
+
+    .start-highlighting-btn:active {
+      transform: translateY(0);
+      box-shadow: none;
+    }
+  </style>
 </head>
+
 <body>
   <div class="popup-container">
     <header class="popup-header">
       <h1>Recent Bug Reports</h1>
     </header>
+    <div class="shortcut-info">
+      <p>Press <kbd>Alt + B</kbd> to toggle highlight mode</p>
+      <button id="startHighlighting" class="start-highlighting-btn">Start Highlighting</button>
+    </div>
     <main class="popup-content">
       <div id="reports-list" class="reports-list">
         <div class="loading-state">
@@ -21,4 +180,5 @@
     </main>
   </div>
 </body>
+
 </html>
